# TrackNetV3

./: .gitignore  create_raw_folder.py  init.sh  pyproject.toml  show_rally.py  train copy.py  train.py  zz_Tracknet_badminton_DataConvert.py
raw_data/: game10_Clip10.csv  game10_Clip11.csv  game10_Clip12.csv  game10_Clip2.csv  game10_Clip3.csv  game10_Clip4.csv  game10_Clip5.csv  game10_Clip6.csv  game10_Clip7.csv  game10_Clip8.csv  game10_Clip9.csv  game1_Clip1.csv  game1_Clip10.csv  game1_Clip11.csv  game1_Clip12.csv  game1_Clip13.csv  game1_Clip2.csv  game1_Clip3.csv  game1_Clip5.csv  game1_Clip6.csv  game1_Clip7.csv  game1_Clip8.csv  game1_Clip9.csv  game2_Clip1.csv  game2_Clip2.csv  game2_Clip3.csv  game2_Clip4.csv  game2_Clip5.csv  game2_Clip6.csv  game2_Clip7.csv  game2_Clip8.csv  game3_Clip1.csv  game3_Clip2.csv  game3_Clip3.csv  game3_Clip4.csv  game3_Clip5.csv  game3_Clip6.csv  game3_Clip7.csv  game4_Clip1.csv  game4_Clip2.csv  (+46 more)
raw_data2/: game10_Clip1.csv  game1_Clip4.csv  game3_Clip8.csv  game3_Clip9.csv  game5_Clip15.csv  game7_Clip2.csv  game7_Clip6.csv  game8_Clip1.csv  game8_Clip7.csv
